--- a/src/gnome-shell/theme-42-0/gnome-shell.css
+++ b/src/gnome-shell/theme-42-0/gnome-shell.css
@@ -31,14 +31,14 @@ stage {
 
 .app-well-app:hover .overview-icon,
 .grid-search-result:hover .overview-icon {
-  background-color: rgba(10, 112, 218, 0.5);
-  border: 1px solid #0a70da;
+  background-color: rgba(0, 127, 255, 0.5);
+  border: 1px solid #007fff;
 }
 
 .app-well-app:active .overview-icon,
 .grid-search-result:active .overview-icon {
-  background-color: rgba(10, 112, 218, 0.75);
-  border: 1px solid #0a70da;
+  background-color: rgba(0, 127, 255, 0.75);
+  border: 1px solid #007fff;
 }
 
 .search-statustext {
@@ -52,7 +52,7 @@ stage {
 }
 
 .shell-link:hover {
-  color: #0a70da;
+  color: #007fff;
 }
 
 .lowres-icon {
@@ -68,7 +68,7 @@ StEntry {
   padding: 7px;
   caret-size: 1px;
   caret-color: #464853;
-  selection-background-color: #0a70da;
+  selection-background-color: #007fff;
   selected-color: #ffffff;
   transition-duration: 300ms;
   border-radius: 2px;
@@ -88,7 +88,7 @@ StEntry:hover {
 StEntry:focus {
   color: #464853;
   background-color: #ffffff;
-  border: 1px solid #0a70da;
+  border: 1px solid #007fff;
   box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05);
 }
 
@@ -152,7 +152,7 @@ StEntry StLabel.hint-text {
   text-shadow: none;
   color: #464853;
   background-color: rgba(0, 0, 0, 0.03);
-  border: 1px solid #0a70da;
+  border: 1px solid #007fff;
   box-shadow: none;
 }
 
@@ -162,7 +162,7 @@ StEntry StLabel.hint-text {
 .button:checked {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
@@ -226,7 +226,7 @@ StEntry StLabel.hint-text {
   -slider-height: 4px;
   -slider-background-color: rgba(0, 0, 0, 0.12);
   -slider-border-color: transparent;
-  -slider-active-background-color: #0a70da;
+  -slider-active-background-color: #007fff;
   -slider-active-border-color: transparent;
   -slider-border-width: 0;
   -slider-handle-radius: 0;
@@ -234,7 +234,7 @@ StEntry StLabel.hint-text {
   -barlevel-background-color: rgba(0, 0, 0, 0.12);
   -barlevel-border-width: 0;
   -barlevel-border-color: transparent;
-  -barlevel-active-background-color: #0a70da;
+  -barlevel-active-background-color: #007fff;
   -barlevel-active-border-color: transparent;
   -barlevel-overdrive-color: #F04A50;
   -barlevel-overdrive-border-color: #F04A50;
@@ -282,7 +282,7 @@ StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
 }
 
 StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
-  background-color: #0a70da;
+  background-color: #007fff;
 }
 
 /* Popovers/Menus */
@@ -318,7 +318,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .popup-menu .search-entry:focus {
-  border: 1px solid #0a70da;
+  border: 1px solid #007fff;
 }
 
 .popup-menu-content {
@@ -345,7 +345,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .popup-menu-item:hover, .popup-menu-item:focus, .popup-menu-item.selected {
-  background-color: #0a70da !important;
+  background-color: #007fff !important;
   color: #ffffff !important;
 }
 
@@ -497,7 +497,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .datemenu-today-button:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
@@ -609,7 +609,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .calendar-today:hover {
   font-weight: bold;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: none;
 }
 
@@ -668,7 +668,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .events-button:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
@@ -851,7 +851,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .popup-menu .message:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
@@ -1023,7 +1023,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .candidate-box:selected, .candidate-box:hover, .candidate-box:focus {
-  background-color: #0a70da;
+  background-color: #007fff;
   color: #ffffff;
 }
 
@@ -1102,7 +1102,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   width: 1.6em;
   -shell-counter-overlap-x: 3px;
   -shell-counter-overlap-y: 3px;
-  background-color: #0a70da;
+  background-color: #007fff;
   color: #ffffff;
   border: 2px solid #464853;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
@@ -1193,7 +1193,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .modal-dialog-linked-button:focus {
-  color: #0a70da;
+  color: #007fff;
 }
 
 .modal-dialog-linked-button:active {
@@ -1317,7 +1317,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .prompt-dialog .modal-dialog-linked-button:last-child {
   color: white;
-  background-color: #0a70da;
+  background-color: #007fff;
 }
 
 .prompt-dialog .modal-dialog-linked-button:last-child:hover {
@@ -1397,12 +1397,12 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .audio-selection-device:hover, .audio-selection-device:focus {
-  background-color: #0a70da;
-  border-color: #0a70da;
+  background-color: #007fff;
+  border-color: #007fff;
 }
 
 .audio-selection-device:active {
-  background-color: #0a70da;
+  background-color: #007fff;
   color: #ffffff;
 }
 
@@ -1467,7 +1467,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .nm-dialog-item:selected {
-  background-color: #0a70da;
+  background-color: #007fff;
   color: #ffffff;
 }
 
@@ -1501,7 +1501,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   height: 4px;
   -barlevel-height: 4px;
   -barlevel-background-color: rgba(255, 255, 255, 0.15);
-  -barlevel-active-background-color: #0a70da;
+  -barlevel-active-background-color: #007fff;
   -barlevel-overdrive-color: #F04A50;
   -barlevel-overdrive-separator-width: 3px;
 }
@@ -1579,7 +1579,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .cycler-highlight {
-  border: 5px solid #0a70da;
+  border: 5px solid #007fff;
 }
 
 /* Workspace Switcher */
@@ -1608,7 +1608,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .ws-switcher-active-left,
 .ws-switcher-active-right {
   height: 52px;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2f7edc;
   border-radius: 2px;
   color: #ffffff;
@@ -1676,7 +1676,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 #panel .panel-button:active, #panel .panel-button:overview, #panel .panel-button:focus, #panel .panel-button:checked {
   color: #D3DAE3;
   background-color: rgba(211, 218, 227, 0.16);
-  box-shadow: inset 0 -2px 0 #0a70da;
+  box-shadow: inset 0 -2px 0 #007fff;
   border-radius: 0;
 }
 
@@ -1769,7 +1769,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 /* Activities Ripple */
 .ripple-box {
-  background-color: #0a70da;
+  background-color: #007fff;
   box-shadow: 0 0 2px 2px #a9caf1;
   width: 52px;
   height: 52px;
@@ -1819,7 +1819,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-close {
-  background-color: #0a70da;
+  background-color: #007fff;
   color: #ffffff;
   border: none;
   border-radius: 22px;
@@ -1872,7 +1872,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .search-entry:focus {
   padding: 7px 9px;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   caret-color: #ffffff;
   selection-background-color: rgba(255, 255, 255, 0.25);
   selected-color: #ffffff;
@@ -1934,14 +1934,14 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .list-search-result:focus, .search-provider-icon:focus, .list-search-result:hover, .search-provider-icon:hover, .list-search-result:selected, .search-provider-icon:selected {
-  background-color: rgba(10, 112, 218, 0.5);
-  border: 1px solid #0a70da;
+  background-color: rgba(0, 127, 255, 0.5);
+  border: 1px solid #007fff;
 }
 
 .list-search-result:active, .search-provider-icon:active {
   box-shadow: none;
-  background-color: rgba(10, 112, 218, 0.75);
-  border: 1px solid #0a70da;
+  background-color: rgba(0, 127, 255, 0.75);
+  border: 1px solid #007fff;
 }
 
 .grid-search-results {
@@ -2004,8 +2004,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .app-well-app.app-folder:active {
-  background-color: rgba(10, 112, 218, 0.5);
-  border: 1px solid #0a70da;
+  background-color: rgba(0, 127, 255, 0.5);
+  border: 1px solid #007fff;
 }
 
 .app-well-app.app-folder .overview-icon, .app-well-app.app-folder:hover .overview-icon, .app-well-app.app-folder:active .overview-icon {
@@ -2015,7 +2015,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .app-folder-dialog {
   border-radius: 6px;
-  border: 1px solid #0a70da;
+  border: 1px solid #007fff;
   padding: 6px;
   space: 6px;
   background-color: rgba(40, 42, 51, 0.9);
@@ -2068,8 +2068,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .app-folder-dialog .folder-name-container .edit-folder-button:active, .app-folder-dialog .folder-name-container .edit-folder-button:checked {
   text-shadow: none;
   color: #ffffff;
-  border-color: #0a70da;
-  background-color: #0a70da;
+  border-color: #007fff;
+  background-color: #007fff;
   box-shadow: none;
 }
 
@@ -2111,7 +2111,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 StWidget.focused .app-well-app-running-dot {
   width: 28px;
   height: 2px;
-  background-color: #0a70da;
+  background-color: #007fff;
 }
 
 .rename-folder-popup .rename-folder-popup-item {
@@ -2159,12 +2159,12 @@ StWidget.focused .app-well-app-running-dot {
 
 .show-apps:active .overview-icon, .show-apps:checked .overview-icon {
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   box-shadow: none;
 }
 
 .workspace-thumbnail-indicator {
-  border: 3px solid #0a70da;
+  border: 3px solid #007fff;
   border-radius: 5px;
   padding: 0px;
 }
@@ -2181,12 +2181,12 @@ StWidget.focused .app-well-app-running-dot {
   width: 60px;
   height: 60px;
   -pie-border-width: 3px;
-  -pie-border-color: #0a70da;
+  -pie-border-color: #007fff;
   -pie-background-color: rgba(255, 255, 255, 0.3);
 }
 
 .magnifier-zoom-region {
-  border: 2px solid #0a70da;
+  border: 2px solid #007fff;
 }
 
 .magnifier-zoom-region.full-screen {
@@ -2194,8 +2194,8 @@ StWidget.focused .app-well-app-running-dot {
 }
 
 .select-area-rubberband {
-  background-color: rgba(10, 112, 218, 0.3);
-  border: 1px solid #0a70da;
+  background-color: rgba(0, 127, 255, 0.3);
+  border: 1px solid #007fff;
 }
 
 .user-icon {
@@ -2265,8 +2265,8 @@ StWidget.focused .app-well-app-running-dot {
 
 /* Tiled window previews */
 .tile-preview {
-  background-color: rgba(10, 112, 218, 0.5);
-  border: 1px solid #0a70da;
+  background-color: rgba(0, 127, 255, 0.5);
+  border: 1px solid #007fff;
 }
 
 .tile-preview-left.on-primary {
@@ -2334,7 +2334,7 @@ StWidget.focused .app-well-app-running-dot {
 .keyboard-key:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
@@ -2364,7 +2364,7 @@ StWidget.focused .app-well-app-running-dot {
 .keyboard-key.default-key:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
@@ -2372,7 +2372,7 @@ StWidget.focused .app-well-app-running-dot {
 .keyboard-key.enter-key {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: none;
 }
@@ -2388,13 +2388,13 @@ StWidget.focused .app-well-app-running-dot {
 .keyboard-key.enter-key:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
 
 .keyboard-key.shift-key-uppercase {
-  color: #0a70da;
+  color: #007fff;
 }
 
 .keyboard-key StIcon {
@@ -2440,7 +2440,7 @@ StWidget.focused .app-well-app-running-dot {
 .keyboard-subkeys .keyboard-key:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
@@ -2453,7 +2453,7 @@ StWidget.focused .app-well-app-running-dot {
 
 .emoji-panel .keyboard-key:latched {
   border-color: #68a2e6;
-  background-color: #0a70da;
+  background-color: #007fff;
 }
 
 .word-suggestions {
@@ -2517,7 +2517,7 @@ StWidget.focused .app-well-app-running-dot {
   color: #D3DAE3;
   border-color: rgba(211, 218, 227, 0.2);
   min-height: 22px;
-  selection-background-color: #0a70da;
+  selection-background-color: #007fff;
   selected-color: #ffffff;
 }
 
@@ -2526,7 +2526,7 @@ StWidget.focused .app-well-app-running-dot {
 }
 
 .lg-dialog .shell-link:hover {
-  color: #0a70da;
+  color: #007fff;
 }
 
 .lg-dialog .shell-link:active {
@@ -2656,10 +2656,10 @@ StWidget.focused .app-well-app-running-dot {
 .login-dialog .modal-dialog-button:default {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: none;
-  border-color: #0a70da;
+  border-color: #007fff;
 }
 
 .unlock-dialog .modal-dialog-button:default:hover, .unlock-dialog .modal-dialog-button:default:focus,
@@ -2678,7 +2678,7 @@ StWidget.focused .app-well-app-running-dot {
 .login-dialog .modal-dialog-button:default:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
   background-color: #3c86de;
@@ -2778,12 +2778,12 @@ StWidget.focused .app-well-app-running-dot {
 }
 
 .login-dialog-user-list:expanded .login-dialog-user-list-item:selected {
-  background-color: #0a70da;
+  background-color: #007fff;
   color: #ffffff;
 }
 
 .login-dialog-user-list:expanded .login-dialog-user-list-item:logged-in {
-  border-right: 2px solid #0a70da;
+  border-right: 2px solid #007fff;
 }
 
 .login-dialog-user-list-item {
@@ -2936,7 +2936,7 @@ StWidget.focused .app-well-app-running-dot {
 }
 
 #unlockDialogNotifications StButton#vhandle:active, #unlockDialogNotifications StButton#hhandle:active {
-  background-color: rgba(10, 112, 218, 0.5);
+  background-color: rgba(0, 127, 255, 0.5);
 }
 
 /* App Grid */
@@ -3145,13 +3145,13 @@ StWidget.focused .app-well-app-running-dot {
   box-shadow: none;
   margin: 2px;
   border-radius: 0;
-  background-color: #0a70da;
+  background-color: #007fff;
 }
 
 #dashtodockContainer .dash-item-container > StWidget.focused .app-well-app-running-dot {
   width: 18px;
   height: 2px;
-  background-color: #0a70da;
+  background-color: #007fff;
 }
 
 #dashtodockContainer .number-overlay,
@@ -3186,7 +3186,7 @@ StWidget.focused .app-well-app-running-dot {
 }
 
 .openweather-button:hover, .openweather-button-action:hover, .openweather-menu-button-container:hover, .openweather-button-box:hover {
-  border: 1px solid #0a70da;
+  border: 1px solid #007fff;
 }
 
 .openweather-provider {
@@ -3218,7 +3218,7 @@ StWidget.focused .app-well-app-running-dot {
 .openweather-provider:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #0a70da;
+  background-color: #007fff;
   border: 1px solid #2679db;
   box-shadow: none;
 }
