--- a/src/cinnamon/cinnamon-Dark.css
+++ b/src/cinnamon/cinnamon-Dark.css
@@ -27,7 +27,7 @@ stage {
   text-shadow: none;
   color: #e6ebef;
   background-color: #2c2f39;
-  border: 1px solid #007fff;
+  border: 1px solid #217def;
   box-shadow: inset 0 2px 4px rgba(44, 47, 57, 0.05);
 }
 
@@ -43,16 +43,16 @@ stage {
   text-shadow: none;
   color: #e6ebef;
   background-color: #2c2f39;
-  border: 1px solid #007fff;
+  border: 1px solid #217def;
   box-shadow: inset 0 2px 4px rgba(44, 47, 57, 0.05);
 }
 
 .sound-button:active, .menu #notification .notification-button:active, .menu #notification .notification-icon-button:active, .popup-menu #notification .notification-button:active, .popup-menu #notification .notification-icon-button:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #007fff;
-  border: 1px solid #007fff;
-  box-shadow: inset 0 2px 4px #007fff;
+  background-color: #217def;
+  border: 1px solid #217def;
+  box-shadow: inset 0 2px 4px #217def;
 }
 
 .sound-button:insensitive, .menu #notification .notification-button:insensitive, .menu #notification .notification-icon-button:insensitive, .popup-menu #notification .notification-button:insensitive, .popup-menu #notification .notification-icon-button:insensitive {
@@ -82,14 +82,14 @@ stage {
 }
 
 .modal-dialog-button-box .modal-dialog-button:focus, .notification-button:focus, .notification-icon-button:focus {
-  color: #007fff;
+  color: #217def;
 }
 
 .modal-dialog-button-box .modal-dialog-button:active, .notification-button:active, .notification-icon-button:active {
   text-shadow: none;
   color: #ffffff;
-  border: 1px solid #007fff;
-  background-color: #007fff;
+  border: 1px solid #217def;
+  background-color: #217def;
 }
 
 .modal-dialog-button-box .modal-dialog-button:insensitive, .notification-button:insensitive, .notification-icon-button:insensitive {
@@ -102,7 +102,7 @@ stage {
 #menu-search-entry, .menu #notification StEntry, .popup-menu #notification StEntry {
   padding: 7px;
   caret-size: 1px;
-  selection-background-color: #007fff;
+  selection-background-color: #217def;
   selected-color: #ffffff;
   transition-duration: 300ms;
   border-radius: 2px;
@@ -115,7 +115,7 @@ stage {
 #menu-search-entry:focus, .menu #notification StEntry:focus, .popup-menu #notification StEntry:focus, #menu-search-entry:hover, .menu #notification StEntry:hover, .popup-menu #notification StEntry:hover {
   color: #e6ebef;
   background-color: #282a33;
-  border: 1px solid #007fff;
+  border: 1px solid #217def;
   box-shadow: inset 0 2px 4px rgba(40, 42, 51, 0.05);
 }
 
@@ -136,7 +136,7 @@ stage {
   padding: 7px;
   caret-size: 1px;
   caret-color: #D3DAE3;
-  selection-background-color: #007fff;
+  selection-background-color: #217def;
   selected-color: #ffffff;
   transition-duration: 300ms;
   border-radius: 2px;
@@ -148,8 +148,8 @@ stage {
 
 .notification StEntry:focus {
   color: #ffffff;
-  background-color: #007fff;
-  border: 1px solid #007fff;
+  background-color: #217def;
+  border: 1px solid #217def;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
@@ -194,7 +194,7 @@ StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
 }
 
 StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
-  background-color: #007fff;
+  background-color: #217def;
 }
 
 .separator {
@@ -210,7 +210,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   -slider-height: 4px;
   -slider-background-color: rgba(255, 255, 255, 0.25);
   -slider-border-color: rgba(0, 0, 0, 0);
-  -slider-active-background-color: #007fff;
+  -slider-active-background-color: #217def;
   -slider-active-border-color: rgba(0, 0, 0, 0);
   -slider-border-width: 0;
   -slider-handle-radius: 4px;
@@ -394,7 +394,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .popup-menu .popup-menu-item:active,
 .popup-combo-menu .popup-menu-item:active {
   color: #ffffff;
-  background-color: #007fff;
+  background-color: #217def;
 }
 
 .menu .popup-menu-item:insensitive,
@@ -600,9 +600,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 #selected.window-caption {
-  background-color: #007fff;
+  background-color: #217def;
   color: #ffffff;
-  border: 1px solid #007fff;
+  border: 1px solid #217def;
   spacing: 25px;
 }
 
@@ -621,13 +621,13 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .expo-workspaces-name-entry:focus,
 #selected.expo-workspaces-name-entry:focus {
-  border: 1px solid #007fff;
-  background-color: #007fff;
+  border: 1px solid #217def;
+  background-color: #217def;
   color: #ffffff;
   font-style: italic;
   transition-duration: 300;
   selection-background-color: #ffffff;
-  selected-color: #007fff;
+  selected-color: #217def;
 }
 
 .expo-workspace-thumbnail-frame {
@@ -637,7 +637,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 #active.expo-workspace-thumbnail-frame {
-  border: 4px solid #007fff;
+  border: 4px solid #217def;
   background-color: black;
   border-radius: 2px;
 }
@@ -868,7 +868,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .calendar-today:hover {
   font-weight: bold;
   color: #ffffff;
-  background-color: #007fff;
+  background-color: #217def;
   border-width: 0;
 }
 
@@ -978,13 +978,13 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .switcher-list .item-box:outlined {
   padding: 8px;
-  border: 1px solid #007fff;
+  border: 1px solid #217def;
 }
 
 .switcher-list .item-box:selected {
   color: #ffffff;
-  background-color: #007fff;
-  border: 0px solid #007fff;
+  background-color: #217def;
+  border: 0px solid #217def;
 }
 
 .switcher-list .thumbnail {
@@ -1105,7 +1105,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   border-radius: 2px;
   caret-color: #D3DAE3;
   selected-color: #ffffff;
-  selection-background-color: #007fff;
+  selection-background-color: #217def;
   color: #D3DAE3;
   background-color: #333641;
   border: 1px solid #434655;
@@ -1118,7 +1118,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   border: 1px solid #434655;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
   background-color: #282A33;
-  border-color: #007fff;
+  border-color: #217def;
 }
 
 .run-dialog .modal-dialog-button-box {
@@ -1254,8 +1254,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .keyboard-key:active, .keyboard-key:checked {
   text-shadow: none;
   color: #ffffff;
-  border: 1px solid #007fff;
-  background-color: #007fff;
+  border: 1px solid #217def;
+  background-color: #217def;
 }
 
 .keyboard-key:grayed {
@@ -1332,9 +1332,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   padding: 6px;
   text-shadow: none;
   color: #ffffff;
-  background-color: #007fff;
-  border: 1px solid #007fff;
-  box-shadow: inset 0 2px 4px #007fff;
+  background-color: #217def;
+  border: 1px solid #217def;
+  box-shadow: inset 0 2px 4px #217def;
   border: 0 none transparent !important;
   border-radius: 2px;
 }
@@ -1397,7 +1397,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .menu-category-button-hover, .menu-category-button-selected {
   padding: 6px;
-  background-color: #007fff;
+  background-color: #217def;
   color: #ffffff;
   border: 1px solid #68a2e6;
   border-radius: 2px;
@@ -1491,12 +1491,12 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   height: 4px;
   background-color: rgba(0, 0, 0, 0.65);
   border-radius: 2px;
-  color: #007fff;
+  color: #217def;
 }
 
 .osd-window .level-bar {
   border-radius: 2px;
-  background-color: #007fff;
+  background-color: #217def;
 }
 
 .window-list-box {
@@ -1617,7 +1617,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .window-list-item-box:active, .window-list-item-box:checked, .window-list-item-box:running {
   color: #ffffff;
-  border: 0 solid rgba(0, 127, 255, 0.35);
+  border: 0 solid rgba(33, 125, 239, 0.35);
   background-gradient-direction: none;
 }
 
@@ -1638,12 +1638,12 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-list-item-box:active:hover, .window-list-item-box:checked:hover, .window-list-item-box:running:hover {
-  border-color: rgba(0, 127, 255, 0.5);
+  border-color: rgba(33, 125, 239, 0.5);
 }
 
 .window-list-item-box:focus {
   color: #ffffff;
-  border: 0 solid #007fff;
+  border: 0 solid #217def;
   background-gradient-direction: none;
 }
 
@@ -1670,8 +1670,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .window-list-item-box .progress {
   background-gradient-direction: vertical;
-  background-gradient-start: #007fff;
-  background-gradient-end: #007fff;
+  background-gradient-start: #217def;
+  background-gradient-end: #217def;
   border-radius: 2px;
   box-shadow: none;
 }
@@ -1706,7 +1706,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .grouped-window-list-thumbnail-menu .item-box:outlined {
   padding: 2px;
-  border: 2px solid #007fff;
+  border: 2px solid #217def;
 }
 
 .grouped-window-list-thumbnail-menu .item-box:selected {
@@ -1736,7 +1736,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .grouped-window-list-badge {
   border-radius: 256px;
-  background-color: #007fff;
+  background-color: #217def;
 }
 
 .grouped-window-list-item-box {
@@ -1807,7 +1807,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .grouped-window-list-item-box:active, .grouped-window-list-item-box:checked, .grouped-window-list-item-box:running {
   color: #ffffff;
-  border: 0 solid rgba(0, 127, 255, 0.35);
+  border: 0 solid rgba(33, 125, 239, 0.35);
   background-gradient-direction: none;
 }
 
@@ -1828,12 +1828,12 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .grouped-window-list-item-box:active:hover, .grouped-window-list-item-box:checked:hover, .grouped-window-list-item-box:running:hover {
-  border-color: rgba(0, 127, 255, 0.5);
+  border-color: rgba(33, 125, 239, 0.5);
 }
 
 .grouped-window-list-item-box:focus {
   color: #ffffff;
-  border: 0 solid #007fff;
+  border: 0 solid #217def;
   background-gradient-direction: none;
 }
 
@@ -1855,8 +1855,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .grouped-window-list-item-box .progress {
   background-gradient-direction: vertical;
-  background-gradient-start: #007fff;
-  background-gradient-end: #007fff;
+  background-gradient-start: #217def;
+  background-gradient-end: #217def;
   border-radius: 2px;
   box-shadow: none;
 }
@@ -2000,9 +2000,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .sound-player-overlay StButton:active {
   text-shadow: none;
   color: #ffffff;
-  background-color: #007fff;
-  border: 1px solid #007fff;
-  box-shadow: inset 0 2px 4px #007fff;
+  background-color: #217def;
+  border: 1px solid #217def;
+  box-shadow: inset 0 2px 4px #217def;
 }
 
 .sound-player-overlay StBoxLayout {
@@ -2016,7 +2016,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   -slider-height: 0.5em;
   -slider-background-color: #27282f;
   -slider-border-color: rgba(0, 0, 0, 0);
-  -slider-active-background-color: #007fff;
+  -slider-active-background-color: #217def;
   -slider-active-border-color: rgba(0, 0, 0, 0);
   -slider-border-width: 0px;
   -slider-handle-radius: 0px;
@@ -2043,11 +2043,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .workspace-button:outlined, .workspace-button:outlined:hover {
-  color: #007fff;
+  color: #217def;
 }
 
 .workspace-button:hover {
-  color: rgba(0, 127, 255, 0.5);
+  color: rgba(33, 125, 239, 0.5);
 }
 
 /* Controls the style when using the "Visual representation" option */
@@ -2063,7 +2063,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .workspace-graph .workspace:active {
-  border: 1px solid #007fff;
+  border: 1px solid #217def;
   background-gradient-direction: none;
 }
 
@@ -2096,7 +2096,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .panel-launcher:hover {
   background-gradient-direction: none;
-  border: 0px solid #007fff;
+  border: 0px solid #217def;
 }
 
 .panel-bottom .panel-launcher:hover {
@@ -2126,7 +2126,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .launcher:hover {
-  border: 0 solid #007fff;
+  border: 0 solid #217def;
   background-gradient-direction: none;
 }
 
@@ -2194,7 +2194,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .applet-box:checked, .applet-box:checked:hover {
   color: #ffffff;
-  background-color: #007fff;
+  background-color: #217def;
 }
 
 .applet-box:highlight {
@@ -2280,8 +2280,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .desklet-drag-placeholder {
-  border: 2px solid #007fff;
-  background-color: rgba(0, 127, 255, 0.3);
+  border: 2px solid #217def;
+  background-color: rgba(33, 125, 239, 0.3);
 }
 
 .photoframe-box {
@@ -2309,8 +2309,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .tile-preview, .tile-preview.snap,
 .tile-hud, .tile-hud.snap {
-  background-color: rgba(0, 127, 255, 0.3);
-  border: 1px solid #007fff;
+  background-color: rgba(33, 125, 239, 0.3);
+  border: 1px solid #217def;
 }
 
 .xkcd-box {
