--- a/_themes/QogirB-Light/gtk-3.0/gtk.css
+++ b/_themes/QogirB-Light/gtk-3.0/gtk.css
@@ -3137,121 +3137,104 @@ notebook > header > tabs > tab button.flat:active, notebook > header > tabs > ta
 }
 
 scrollbar {
-  background-color: rgba(0, 0, 0, 0.05);
-  transition: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-* {
-  -GtkScrollbar-has-backward-stepper: false;
-  -GtkScrollbar-has-forward-stepper: false;
-}
-
-scrollbar.top {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-}
-
-scrollbar.bottom {
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
-}
-
-scrollbar.left {
-  border-right: 1px solid rgba(0, 0, 0, 0.12);
-}
-
-scrollbar.right {
-  border-left: 1px solid rgba(0, 0, 0, 0.12);
-}
-
-scrollbar button {
   border: none;
-}
-
-scrollbar.vertical button.down {
-  -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
-}
-
-scrollbar.vertical button.up {
-  -gtk-icon-source: -gtk-icontheme("pan-up-symbolic");
-}
-
-scrollbar.horizontal button.down {
-  -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");
-}
-
-scrollbar.horizontal button.up {
-  -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");
-}
-
-scrollbar slider {
-  min-width: 6px;
-  min-height: 6px;
-  margin: -1px;
-  border: 4px solid transparent;
-  border-radius: 8px;
-  background-clip: padding-box;
-  background-color: #b2b3b8;
-}
-
-scrollbar slider:hover {
-  background-color: #c4c5c9;
-}
-
-scrollbar slider:hover:active {
-  background-color: #3884de;
-}
-
-scrollbar slider:disabled {
-  background-color: transparent;
-}
-
-scrollbar.fine-tune slider {
-  min-width: 4px;
-  min-height: 4px;
-}
-
-scrollbar.fine-tune.horizontal slider {
-  border-width: 5px 4px;
-}
-
-scrollbar.fine-tune.vertical slider {
-  border-width: 4px 5px;
-}
-
-scrollbar.overlay-indicator:not(.dragging):not(.hovering) {
-  opacity: 0.4;
-  border-color: transparent;
-  background-color: transparent;
-}
-
-scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider {
-  margin: 0;
-  min-width: 4px;
-  min-height: 4px;
-  background-color: #7c7e86;
-  border: 1px solid rgba(255, 255, 255, 0.6);
-}
-
-scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal slider {
-  margin: 0 2px;
-  min-width: 40px;
-}
-
-scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical slider {
-  margin: 2px 0;
-  min-height: 40px;
-}
-
-scrollbar.overlay-indicator.dragging, scrollbar.overlay-indicator.hovering {
-  opacity: 0.99;
-}
-
-scrollbar.horizontal slider {
-  min-width: 40px;
-}
-
-scrollbar.vertical slider {
-  min-height: 40px;
-}
+  background-color: #f0f0f0; }
+  scrollbar trough {
+    border: none;
+    border-radius: 0; }
+  scrollbar:backdrop {
+    background-color: #f0f0f0; }
+  scrollbar button:hover {
+    border-color: #f0f0f0;
+    background-color: #cccccc; }
+  scrollbar button:active {
+    border-color: #f0f0f0;
+    background-color: #666666; }
+  scrollbar button, scrollbar button:backdrop, scrollbar button:disabled, scrollbar button:disabled:backdrop {
+    padding: 3px;
+    border-color: #f0f0f0;
+    background-color: #f0f0f0; }
+  scrollbar slider {
+    min-width: 45px;
+    min-height: 14px;
+    margin: 0;
+    border: none;
+    border-radius: 0px;
+    background-clip: padding-box;
+    background-color: #cdcdcd; } /* scrollbar active color */
+    scrollbar slider:hover {
+      background-color: #a6a6a6; 
+    }
+    scrollbar slider:hover:active {
+      background-color: #666666; 
+    }
+    scrollbar slider:backdrop {
+      background-color: #cdcdcd; 
+    }
+    scrollbar slider:disabled {
+      background-color: transparent; 
+    }
+    scrollbar.vertical slider {
+    min-width: 14px;
+    min-height: 45px; 
+  }
+  scrollbar.overlay-indicator:not(.dragging):not(.hovering) {
+    border: none;
+    opacity: 0.7;
+    margin: 0;
+    background-color: transparent; }
+    scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider {
+      margin: 0;
+      min-width: 2px;
+      min-height: 2px;
+      background-color: #666666;
+      border: 2px solid transparent;
+      border-radius: 2px; }
+    scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal slider {
+      margin: 0;
+      min-width: 40px; }
+    scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical slider {
+      margin: 0;
+      min-height: 40px; }
+    scrollbar.overlay-indicator:not(.dragging):not(.hovering) button {
+      min-width: 0;
+      min-height: 0;
+      padding: 0;
+      border: none;
+      box-shadow: none;
+      color: transparent;
+      background-color: transparent; }
+  scrollbar.overlay-indicator.dragging, scrollbar.overlay-indicator.hovering {
+    opacity: 1; }
+  scrollbar.horizontal slider {
+    min-width: 40px; }
+  scrollbar.horizontal button {
+    min-height: 6px;
+    min-width: 6px; }
+    scrollbar.horizontal button.down {
+      -gtk-icon-source: url("assets/arrow-right.svg"); }
+      scrollbar.horizontal button.down:active {
+        -gtk-icon-source: url("assets/arrow-right-active.svg"); }
+    scrollbar.horizontal button.up {
+      -gtk-icon-source: url("assets/arrow-left.svg"); }
+      scrollbar.horizontal button.up:active {
+        -gtk-icon-source: url("assets/arrow-left-active.svg"); }
+  scrollbar.vertical slider {
+    min-height: 40px; }
+  scrollbar.vertical button {
+    min-height: 6px;
+    min-width: 6px; }
+    scrollbar.vertical button.down {
+      -gtk-icon-source: url("assets/arrow-down.svg"); }
+      scrollbar.vertical button.down:active {
+        -gtk-icon-source: url("assets/arrow-down-active.svg"); }
+    scrollbar.vertical button.up {
+      -gtk-icon-source: url("assets/arrow-up.svg"); }
+      scrollbar.vertical button.up:active {
+        -gtk-icon-source: url("assets/arrow-up-active.svg"); }
+  treeview ~ scrollbar.vertical {
+    border-top: 1px solid #f0f0f0;
+    margin-top: -1px; }
 
 switch {
   font-size: 0;
@@ -10412,15 +10395,15 @@ window.background.csd > headerbar.titlebar > leaflet > headerbar:first-child but
 }
 
 .nemo-window .sidebar scrollbar slider, .nautilus-window placessidebar.sidebar scrollbar slider {
-  background-color: rgba(124, 128, 136, 0.7);
+  background-color: rgba(205, 205, 205, 0.7);
 }
 
 .nemo-window .sidebar scrollbar slider:hover, .nautilus-window placessidebar.sidebar scrollbar slider:hover {
-  background-color: #898d94;
+  background-color: #898d94; /* scrollbar color inactive file manager */
 }
 
 .nemo-window .sidebar scrollbar slider:hover:active, .nautilus-window placessidebar.sidebar scrollbar slider:hover:active {
-  background-color: #3884de;
+  background-color: #666666;
 }
 
 .nemo-window .sidebar scrollbar slider:disabled, .nautilus-window placessidebar.sidebar scrollbar slider:disabled {
@@ -10428,7 +10411,7 @@ window.background.csd > headerbar.titlebar > leaflet > headerbar:first-child but
 }
 
 .nemo-window .sidebar scrollbar trough, .nautilus-window placessidebar.sidebar scrollbar trough {
-  background-color: #e4edf3;
+  background-color: #f0f0f0;
 }
 
 .nautilus-window headerbar {
